--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start:web": "cd web && yarn start",
         "start:functions": "cd functions && yarn build:watch",
         "start:emulators": "yarn firebase emulators:start --import=./emulator_data --export-on-exit=./emulator_data",
+        "build:web": "cd web && yarn run build",
         "lint": "eslint .",
         "deploy": "firebase deploy"
     },
@@ -28,6 +29,7 @@
     "dependencies": {
         "@typescript-eslint/eslint-plugin": "^5.40.0",
         "@typescript-eslint/parser": "^5.40.0",
+        "concurrently": "^7.4.0",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
