--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,7 +10,8 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/node-setup@v3
       - run: yarn ci && yarn run build:web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -18,3 +19,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BESLIS_VIS }}'
           channelId: live
           projectId: beslis-vis
+          node-version: 16
+
