--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/node-setup@v3
+      - uses: actions/setup-node@v3
       - run: yarn ci && yarn run build:web
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
