--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,13 @@
         "@types/node": "^16.11.66",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "firebase": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-ga": "^3.3.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.8.4",
-        "web-vitals": "^2.1.4",
-        "firebase": "*"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
