--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "web/build/**":true
+        "web/build/**":true,
+        ".firebase/**": true,
+        ".github/**": true,
+        "emulator_data/**": true
     }
 }
