--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "firebase": "*",
+        "query-string": "^7.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga4": "^1.4.1",
